--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- SEO -->
     <title>Насолодитися красою Пивихи</title>
-    <meta name="description" content="WebSlides is the easiest way to make HTML presentations, portfolios, and landings. Just essential features.">
+    <meta name="description" content="">
     <link rel="stylesheet" type='text/css' media='all' href="static/style.css">
     <link rel="stylesheet" type='text/css' media='all' href="static/animate.css">
     <!-- Google Fonts -->
